fix(kit): align for multiSelectTexts (#3978)

--- a/projects/kit/components/multi-select/multi-select-group/multi-select-group.style.less
+++ b/projects/kit/components/multi-select/multi-select-group/multi-select-group.style.less
@@ -16,5 +16,4 @@
 
 .t-button {
     margin: 0.75rem 1rem 0 auto;
-    line-height: 1rem;
 }
